--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -312,7 +312,7 @@ select{
 
 .miniDropHome{
   padding: 10px;
-  background: linear-gradient(136deg,#110e0e,#252525);
+  /* background: linear-gradient(136deg,#110e0e,#252525); */
   z-index: 99;
   border-radius: 16px;
 
@@ -326,9 +326,13 @@ select{
     li{
       padding: 5px;
       width: 100%;
-      text-align: center;
-      border-bottom: 1px solid gray;
+      text-align: start;
+      border-bottom: 1px solid rgba(100, 100, 100, 0.2);
       cursor: pointer;
+      
+      i{
+        margin-right: 10px;
+      }
     }
   }
 }
