change some tables /Create API calling function from cliet side for PostReport and DeletePost

--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -8,7 +8,7 @@
 
 }
 [data-theme='dark-yellow']{
-    --bg-color: #070007;
+    --bg-color: #0c020c;
     --text-color: #fff700;
     --p-text-color:#fbff7d;
     --login-txt-color:white;
